--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,25 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
+
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding" color="">
+  <div class="title">
+    <h3>Fazer Login</h3>
+    <p>acessar sua conta.</p>
+  </div>
 
+  <ion-input placeholder="Usuário" class="primary-input"></ion-input>
+  <ion-input placeholder="Senha" class="primary-input" type="password"></ion-input>
+
+  <div class="ion-margin-top ion-text-right forget">
+    <a> Esqueceu sua senha?</a>
+  </div> 
+
+  <div class="ion-margin-top">
+    <ion-button expand="block" (click)="login()">Fazer Login</ion-button>
+  </div>
+
+  <div class="ion-margin-top ion-text-right">
+    <a (click)="dismiss()">Fechar</a>
+  </div>
 </ion-content>
