--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -1,12 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>APPLE STORE</ion-title>
+    <ion-title class="ion-text-center">MAÇÃ STORE</ion-title>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content>
   <ion-list *ngIf="!products.length">
-    <ion-item *ngFor="let item of [0, 1, 2]">
+    <ion-item *ngFor="let item of [0, 1, 2, 3, 4, 5]">
       <ion-avatar slot="start">
         <ion-skeleton-text animated></ion-skeleton-text>
       </ion-avatar>
@@ -25,9 +26,9 @@
   </ion-list>
 
   <ion-list>
-    <ion-item-sliding *ngFor="let product of products">
+    <ion-item-sliding *ngFor="let product of products" class="ion-margin-top">
       <ion-item button [routerLink]="['/details', product.id]">
-        <ion-avatar slot="start">
+        <ion-avatar slot="start" class="ion-margin-top">
           <img [src]="product.picture">
         </ion-avatar>
 
@@ -37,7 +38,10 @@
           <p>{{ product.createdAt | date: 'short' }}</p>
         </ion-label>
 
-        <ion-note color="primary" slot="end" *ngIf="product.price">{{ product.price | currency: 'BRL' }}</ion-note>
+        <ion-note color="primary" slot="end" *ngIf="product.price">
+          {{ product.price | currency: 'BRL' }}
+          
+        </ion-note>
       </ion-item>
 
       <ion-item-options side="end">
@@ -48,7 +52,15 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
 </ion-content>
+<div class="ion-margin-top ion-text-right ion-padding">
+  <a class="ion-text-right"(click)="map()" style="text-decoration: none; color: white">Loja mais Próxima <ion-icon name="map-sharp"></ion-icon></a>
+</div>
+
+
+ 
+
 
 <ion-footer>
   <ion-toolbar>
