--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,7 +17,7 @@
     </ion-button>
   </div>
 </ion-content>
-<ion-footer class="footer ion-text-center">
+<ion-footer class="footer ion-text-center ion-margin-top">
   <ion-toolbar>
 
     <p>app desenvolvido por:</p>
