--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,10 +2,12 @@
 </ion-header>
 
 <ion-content class="ion-padding ion-text-center" color="">
-  <h1 class="ion-padding">MAÇÃ STORE</h1>
-  <img src="../../../assets/img/apple.png" alt="">
+  <h1 class="ion-padding">COVID-19</h1>
+  <a href="https://covid19-brazil-api.vercel.app/" target="_blank">
+    <img src="../../../assets/img/apple.png" alt="">
+  </a>
   <div class="title">
-    <h2>Bem-vindo</h2>
+    <h4>Para acessar faço login ou cadastre-se</h4>
 
   </div>
 
