--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -1,65 +1,46 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title class="ion-text-center">MAÇÃ STORE</ion-title>
+    <ion-title class="ion-text-center">DADOS COVID19 POR ESTADO</ion-title>
   </ion-toolbar>
-
 </ion-header>
 
-<ion-content>
-  <ion-list *ngIf="!products.length">
-    <ion-item *ngFor="let item of [0, 1, 2, 3, 4, 5]">
-      <ion-avatar slot="start">
-        <ion-skeleton-text animated></ion-skeleton-text>
-      </ion-avatar>
-      <ion-label>
-        <h3>
-          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
-        </h3>
-        <p>
-          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
-        </p>
-        <p>
-          <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
-        </p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+<ion-content [fullscreen]="true">
 
-  <ion-list>
-    <ion-item-sliding *ngFor="let product of products" class="ion-margin-top">
-      <ion-item button [routerLink]="['/details', product.id]">
-        <ion-avatar slot="start" class="ion-margin-top">
-          <img [src]="product.picture">
-        </ion-avatar>
+  <ion-card *ngFor="let estado of estados">
+    <ion-card-header>
+      <ion-card-title>{{estado.state}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-grid>
+         
+            
+            <ion-label>
+              <ion-icon name="pulse-outline"></ion-icon> 
+              Casos: <strong>{{estado.cases}}</strong>
+            </ion-label>
+            
+              <ion-label>
+                <ion-icon name="skull-outline"></ion-icon>
+                Mortos: <strong style="color:red">{{estado.deaths}}</strong>
+              </ion-label>
+            
+    
+              <ion-label>
+                <ion-icon name="medkit-outline"></ion-icon> 
+                Recuperados: <strong style="color:greenyellow">{{estado.refuses}}</strong>
+              </ion-label>
 
-        <ion-label>
-          {{ product.name }}
-          <p>{{ product.description }}</p>
-          <p>{{ product.createdAt | date: 'short' }}</p>
-        </ion-label>
-
-        <ion-note color="primary" slot="end" *ngIf="product.price">
-          {{ product.price | currency: 'BRL' }}
-          
-        </ion-note>
+              
+         
+        </ion-grid>
       </ion-item>
-
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="deleteProduct(product.id)">
-          <ion-icon slot="top" name="trash"></ion-icon>
-          Excluir
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
-<div class="ion-margin-top ion-text-right ion-padding">
-  <a class="ion-text-right"(click)="map()" style="text-decoration: none; color: white">Loja mais Próxima <ion-icon name="map-sharp"></ion-icon></a>
-</div>
 
 
- 
 
 
 <ion-footer>
@@ -73,9 +54,11 @@
         </ion-col>
 
         <ion-col size="6">
-          <ion-button routerLink="/details" expand="block">
-            Adicionar produto
-          </ion-button>
+          <a href="https://covid19-brazil-api.vercel.app/" target="_blank" style="text-decoration:none; color:white">
+            <ion-button expand="block">
+              API
+            </ion-button>
+          </a>
         </ion-col>
       </ion-row>
     </ion-grid>
